@@ -37,6 +37,8 @@ Bug Fixes
   scripts; remove -XX:+AggressiveOpts and only set -XX:-UseSuperWord for Java 1.7u40
   to u51. (Uwe Schindler, janhoy, hossman, Timothy Potter)
 
+* SOLR-6738: Admin UI - Escape Data on Plugins-View (steffkes)
+
 * SOLR-6085: Suggester crashes when prefixToken is longer than surface form (janhoy)
 
 * SOLR-6323: ReRankingQParserPlugin cleaner paging and fix bug with fuzzy, range and other queries
